[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genlm_project"
version = "0.1.0"
description = "Custom GenLM potentials and evaluation suite for TruthfulQA"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "datasets==2.10.0",
    "evaluate",
    "transformers",
    "absl-py",
    "t5",
    "genlm-control",
    "tuned-lens",
    "bleurt @ git+https://github.com/google-research/bleurt.git",
    "genlm-eval @ git+https://github.com/genlm/genlm-eval.git"
]

[tool.setuptools.packages.find]
where = ["src"]