[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genlm_project"
version = "0.1.0"
description = "Implementations and evaluation scripts for running experiments with Intermediate-Layer Sequential Monte Carlo for steering LLM generation using intermediate model representations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "loguru",
    "evaluate",
    "transformers",
    "absl-py",
    "genlm-control",
    "tuned-lens",
    "rouge-score",
    "bleurt @ git+https://github.com/google-research/bleurt.git",
    "genlm-eval @ git+https://github.com/genlm/genlm-eval.git"
]

[tool.setuptools.packages.find]
where = ["src"]
